<resources>
    <string name="app_name">Routrip</string>
    <string name="subtitulo">Planeje hoje. Viaje melhor.</string>
    <string name="icone_destino">Ícone de destino</string>
    <string name="configure_viagem">Configure sua viagem</string>
    <string name="destino">Destino</string>
    <string name="data_ida">Data de ida</string>
    <string name="data_volta">Data de volta</string>
    <string name="selecionar_data">Selecionar</string>
    <string name="preferencias">O que você gosta?</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="natureza">Natureza</string>
    <string name="fotografia">Fotografia</string>
    <string name="continuar">Continuar</string>
    <string name="escolha_nova_volta">Escolha novamente a data de volta</string>
    <string name="selecione_ida_primeiro">Selecione primeiro a data de ida</string>
    <string name="escolha_destino">Escolha um destino</string>
    <string name="escolha_datas">Selecione as datas de ida e volta</string>
    <string name="volta_invalida">A data de volta não pode ser anterior à ida</string>
    <string name="escolha_preferencia">Marque pelo menos uma preferência</string>
    <string name="tudo_certo">Tudo certo!</string>
    <string name="cancelar">Cancelar</string>
    <string name="ver_atividades">Ver atividades</string>
    <string name="resumo_configuracao">Destino: %1$s\nIda: %2$s\nVolta: %3$s\nPreferências: %4$s</string>
    <string name="atividades_para_voce">Atividades para você</string>
    <string name="filtros_selecionados">Filtros: %1$s</string>
    <string name="voltar">Voltar</string>
    <string name="imagem_atividade">Imagem da atividade</string>
    <string name="atividade_selecionada">Selecionado: %1$s</string>
    <string name="detalhes_atividade">Detalhes da atividade</string>
    <string name="duracao">Duração</string>
    <string name="dificuldade">Nível de dificuldade</string>
    <string name="facil">Fácil</string>
    <string name="moderada">Moderada</string>
    <string name="dificil">Difícil</string>
    <string name="adicionar_viagem">Adicionar à viagem</string>
    <string name="confirmar_atividade">Confirmar atividade</string>
    <string name="ver_resumo">Ver resumo</string>
    <string name="resumo_atividade">Atividade: %1$s\nDuração: %2$d hora(s)\nDificuldade: %3$s</string>
    <string name="resumo_viagem">Resumo da viagem</string>
    <string name="dados_viagem">Dados da viagem</string>
    <string name="periodo">Período</string>
    <string name="duracao_viagem">Duração da viagem</string>
    <string name="atividade_escolhida">Atividades escolhidas</string>
    <string name="adicionar_outra_atividade">Adicionar outra atividade</string>
    <string name="atividade_ja_adicionada">Esta atividade já foi adicionada ao roteiro.</string>
    <string name="finalizar_planejamento">Finalizar planejamento</string>
    <string name="viagem_planejada">Viagem planejada!</string>
    <string name="mensagem_finalizacao">Seu planejamento foi concluído com sucesso.</string>
    <string name="voltar_inicio">Voltar ao início</string>
    <string name="periodo_resumo">%1$s até %2$s</string>
    <string name="ok">OK</string>

    <plurals name="quantidade_horas">
        <item quantity="one">%d hora</item>
        <item quantity="other">%d horas</item>
    </plurals>

    <plurals name="quantidade_dias_viagem">
        <item quantity="one">Sua viagem terá %d dia</item>
        <item quantity="other">Sua viagem terá %d dias</item>
    </plurals>

    <string-array name="destinos">
        <item>Selecione um destino</item>
        <item>Foz do Iguaçu</item>
        <item>Florianópolis</item>
        <item>Gramado</item>
        <item>Rio de Janeiro</item>
        <item>Salvador</item>
    </string-array>
</resources>
